fixed scrollbar width

--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,9 @@ main {
     width: 174px;
     height: 200px;
     padding: 17px 15px 12px 15px;
-    border-radius: 4px;
+    border-radius: 9px;
     background-color: #FFFFFF;
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     margin-right: 15px;
 }
 
@@ -260,12 +261,6 @@ main {
 
 .ctn-items-confirm > div:last-child {
     margin-bottom: 0;
-}
-
-@media (max-width: 999px) {
-    ::-webkit-scrollbar {
-        width: 0;  /* Remove scrollbar space */
-    }
 }
 
 /* DESKTOP BREAKPOINT */
